# argocd-appset-pr-checks-generator

./: .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  flake.nix  shell.nix
.github/workflows/: rust.yaml
k8s/argocd-config/: kustomization.yaml  plugin-config-map.yaml
k8s/base/: app.yaml  kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
src/: main.rs
