[package]
name = "argocd-appset-checked-pr-generator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = "0.7.4"
base64 = "0.21.5"
futures = "0.3.30"
hex = "0.4.3"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version = "0.1.2", features = ["client", "client-legacy"] }
jsonwebtoken = "9.2.0"
octocrab = "0.41"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-tracing-utils = { version = "0.5" }
ring = "0.17.7"
serde = "1.0.194"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"

[dev-dependencies]
indoc = "=2.0.5"
mockall = "=0.12.1"
wiremock = "=0.5.22"

# [patch.crates-io]
# # temporarily use a local copy of my tracing utils crate
# opentelemetry-tracing-utils = { path = "../eventspider/eventspider-backend/packages/opentelemetry-tracing-utils" }

[lints.clippy]
pedantic = "warn"
# cargo = "warn"
